welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:16: error: type mismatch;
 found   : Unit
 required: Int
  if (!(a<=20 & a>=10) & !(b<=20 & b>=10)) {
  ^